@@ -72,10 +72,10 @@
 
 #define RENDITION_NAME            "RENDITION"
 #define RENDITION_DRIVER_NAME     "rendition"
-#define RENDITION_VERSION_NAME    "4.0.1"
+#define RENDITION_VERSION_NAME    "4.1.0"
 #define RENDITION_VERSION_MAJOR   4
-#define RENDITION_VERSION_MINOR   0
-#define RENDITION_PATCHLEVEL      1
+#define RENDITION_VERSION_MINOR   1
+#define RENDITION_PATCHLEVEL      0
 #define RENDITION_VERSION_CURRENT ((RENDITION_VERSION_MAJOR << 24) | \
                  (RENDITION_VERSION_MINOR << 16) | RENDITION_PATCHLEVEL)
 
