@@ -14,6 +14,9 @@
 #include "vos.h"
 #include "elf.h"
 
+#include <sys/types.h>
+#include <sys/stat.h>
+#include <fcntl.h>
 
 /*
  * defines 
