@@ -1,3 +1,11 @@
+2006-04-07  Adam Jackson  <ajax@freedesktop.org>
+
+	* configure.ac:
+	* src/rendition.c:
+	* src/rendition.h:
+	* src/vloaduc.c:
+	Unlibcwrap.  Bump server version requirement.  Bump to 4.1.0.
+
 2006-02-08  Luc Verhaegen  <libv@skynet.be>
 
 	* src/rendition.c: (renditionPreInit):
